--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+p{
+	font-weight: bold
+}
+div{
+	max-width: 600px;
+	margin: 10px;
+	padding: 15px;
+	background-color: #f8fffe;
+	border-left: 8px solid green;
+}
