--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@
 p{
 	font-weight: bold
 }
-div{
-	max-width: 600px;
-	margin: 10px;
-	padding: 15px;
-	background-color: #f8fffe;
+blockquote{
 	border-left: 8px solid green;
+	padding: 15px;
+	margin: 10px;
+	max-width: 600px;
+	background-color: #f8fffe;	
 }
